.navbar-custom {   background: white;   position: fixed;   top: 0;   left: 0;   width: 100%;   z-index: 2;   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif; }

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -96,7 +96,7 @@ hr.small {
 }
 .navbar-custom {
   background: white;
-  position: relative;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
